// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox checkbox is checked, click -> not checked 1`] = `
<div
  className="checkbox "
  onClick={[Function]}
  style={
    Object {
      "height": 120,
      "width": 120,
    }
  }
>
  <input
    checked={false}
    name="test-checkbox"
    onChange={[Function]}
    type="checkbox"
    value="test?"
  />
</div>
`;

exports[`Checkbox checkbox is not checked, click -> checked 1`] = `
<div
  className="checkbox checkbox-checked"
  onClick={[Function]}
  style={
    Object {
      "height": 120,
      "width": 120,
    }
  }
>
  <input
    checked={true}
    name="test-checkbox"
    onChange={[Function]}
    type="checkbox"
    value="test?"
  />
</div>
`;
